<resources>
    <string name="app_name">Cadastro</string>
    <string name="nome_completo">Nome Completo:</string>
    <string name="telefone">Telefone:</string>
    <string name="e_mail">E-mail:</string>
    <string name="ingressar_lista_mail">Ingressar na lista de e-mail</string>
    <string name="sexo">Sexo:</string>
    <string name="masculino">Masculino</string>
    <string name="feminino">Feminino</string>
    <string name="cidade">Cidade:</string>
    <string name="estado">Estado:</string>
    <string name="limpar">Limpar</string>
    <string name="enviar">Enviar</string>
    <string-array name="estados">
        <item>AC</item>
        <item>AP</item>
        <item>AM</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MT</item>
        <item>MS</item>
        <item>MG</item>
        <item>PA</item>
        <item>PB</item>
        <item>PR</item>
        <item>PE</item>
        <item>PI</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RS</item>
        <item>RO</item>
        <item>RR</item>
        <item>SC</item>
        <item>SP</item>
        <item>SE</item>
        <item>TO</item>
    </string-array>
</resources>