<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/nameTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nome_completo"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/nameEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/nameTv"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/telTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/telefone"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameEt"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/telEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/telTv"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/emailTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/e_mail"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/telEt"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/emailEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/emailTv"
        app:layout_constraintStart_toStartOf="parent"
        />

    <CheckBox
        android:id="@+id/listEmailCb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ingressar_lista_mail"
        app:layout_constraintTop_toBottomOf="@+id/emailEt"
        />

    <TextView
        android:id="@+id/sexoTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sexo"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listEmailCb"
        app:layout_constraintEnd_toEndOf="parent"
        />
    
    <RadioGroup
        android:id="@+id/sexoRg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/sexoTv"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/mascRb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/masculino"
            />

        <RadioButton
            android:id="@+id/femRb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/feminino"
            />
    </RadioGroup>

    <TextView
        android:id="@+id/cidadeTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cidade"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sexoRg"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/cidadeEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/cidadeTv"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/estadoTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/estado"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cidadeEt"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Spinner
        android:id="@+id/estadoSp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/estados"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/estadoTv" />

    <LinearLayout
        android:id="@+id/cleanSaveLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/estadoSp">

        <Button
            android:id="@+id/cleanBt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/limpar"
            android:layout_weight="2"/>

        <Button
            android:id="@+id/saveBt"
            android:layout_width="0dp"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:text="@string/enviar"
            android:layout_weight="2"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>